[package]
name = "juicy-main-macro"
description = "proc-macro implementation for juicy-main"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.114", features = ["full"] }
quote = "1.0.43"
proc-macro2 = "1.0.105"

[features]
clap = []
